# SpeedAPI-Temporary

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 5c3ff3bd806c_added_users_table.py
speedapi/: app.py  database.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_database.py
