[tool.poetry]
name = "speedapi"
version = "0.1.0"
description = ""
authors = ["Gustavo-B-Morales-S <protected_gustavo_borges@outlook.com>"]
readme = "README.md"
packages = [{include = "speedapi"}]



[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
taskipy = "^1.13.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ignr = "^2.2"
httpie = "^3.2.3"
httpx = "^0.27.0"

[tool.pytest.ini_options]
addopts = '--cov=speedapi --cov-report html'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
